# streaming-rust

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
src/: main.rs
