[package]
name = "streaming-rust"
version = "0.0.1"
authors = ["csteen"]
edition = "2021"

[dependencies]
clap = { version = "3", features = ["derive", "cargo"] }
dirs = "4.0.0"
env_logger = "0.9"
rustyline = "10.0"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }
url = "2.2"